--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
 
 <body>
     <div id="root">
-        <navbar-tag></navbar-tag>
-        <header-tag></header-tag>
-        <breakingnews-tag></breakingnews-tag>
-        <aboutus-tag></aboutus-tag>
-        <deliciousmenu-tag></deliciousmenu-tag>
-        <contactwith-tag></contactwith-tag>
-        <footer-tag></footer-tag>
+        <transition name="fade" mode="out-in">
+            <load-tag v-if="loading" :loading="loading"></load-tag>
+            <div v-else>
+                <navbar-tag></navbar-tag>
+                <header-tag></header-tag>
+                <breakingnews-tag></breakingnews-tag>
+                <aboutus-tag></aboutus-tag>
+                <deliciousmenu-tag></deliciousmenu-tag>
+                <contactwith-tag></contactwith-tag>
+                <footer-tag></footer-tag>
+            </div>
+        </transition>
+
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-scrollto"></script>
